# cell-infinite

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: EXPLAINER.md
scripts/: generate_icon.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/audio/: sound.ts
src/components/: AnimatedNumber.tsx  BottomDock.tsx  CellDetails.tsx  CellGrid.tsx  CellNode.tsx  TopBar.tsx
src/components/modals/: Modal.tsx  OfflineModal.tsx  PlaceCellModal.tsx  SettingsModal.tsx  StatsModal.tsx
src/components/overlay/: AnomalyLayer.tsx  FxOverlay.tsx  HintToast.tsx  RebirthOverlay.tsx
src/components/panels/: AbilitiesPanel.tsx  AchievementsPanel.tsx  AutomationPanel.tsx  QuestsPanel.tsx  RebirthPanel.tsx
src/config/: abilities.ts  balance.ts  cells.ts  events.ts  milestones.ts  quests.ts  rebirthUpgrades.ts
src/game/: decimal.ts  economy.ts  effects.ts  engine.ts  format.ts  grid.ts  offline.ts  rebirth.ts  types.ts
src/hooks/: useGameLoop.ts
src/save/: migrate.ts  serialize.ts  storage.ts
src/store/: createInitialState.ts  gameStore.ts  settingsStore.ts
src/tests/: app.smoke.test.tsx  economy.test.ts  engine.test.ts  format.test.ts  progression.test.ts  rebirth.test.ts  save.test.ts
src/ui/: primitives.tsx
